// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup Ellipsis type - Count Snapshot 1`] = `
<div
  class="AvatarGroup"
  role="group"
  style="--b-avatar-group-spacing: 4px;"
>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Christian Nwamba"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Kola Tioluwani"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Kent Dodds"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Ryan Florence"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Dan Abrahmov"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Prosper Otemuyiwa"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="AvatarEllipsisCountWrapper"
    style="--b-avatar-group-ellipsis-ml: 4px;"
  >
    <span
      class="Text typo-13 margin AvatarEllipsisCount"
      data-testid="bezier-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      +1
    </span>
  </div>
</div>
`;

exports[`AvatarGroup Ellipsis type - Icon Snapshot 1`] = `
<div
  class="AvatarGroup"
  role="group"
  style="--b-avatar-group-spacing: 4px;"
>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Christian Nwamba"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Kola Tioluwani"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Kent Dodds"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Ryan Florence"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="Avatar size-24"
    data-disabled="false"
    data-testid="bezier-avatar-wrapper"
  >
    <div
      aria-description="Dan Abrahmov"
      class="SmoothCornersBox AvatarImage"
      data-state="disabled"
      data-testid="bezier-avatar"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
    />
  </div>
  <div
    class="AvatarEllipsisIconWrapper"
    data-testid="bezier-avatar-group-ellipsis-icon"
  >
    <div
      class="SmoothCornersBox AvatarEllipsisIcon"
      data-state="disabled"
      style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bgtxt-absolute-black-lightest);"
    >
      <svg
        class="Icon size-xs margin"
        data-testid="bezier-icon"
        fill="none"
        height="1em"
        style="--b-icon-color: var(--bgtxt-absolute-white-dark);"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M2.5 12a2.257 2.257 0 0 0 2.25 2.25A2.257 2.257 0 0 0 7 12a2.257 2.257 0 0 0-2.25-2.25A2.257 2.257 0 0 0 2.5 12m9.5 2.25A2.257 2.257 0 0 1 9.75 12 2.257 2.257 0 0 1 12 9.75 2.257 2.257 0 0 1 14.25 12 2.257 2.257 0 0 1 12 14.25m7.25 0A2.257 2.257 0 0 1 17 12a2.257 2.257 0 0 1 2.25-2.25A2.257 2.257 0 0 1 21.5 12a2.257 2.257 0 0 1-2.25 2.25"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="Avatar size-24"
      data-disabled="false"
      data-testid="bezier-avatar-wrapper"
    >
      <div
        aria-description="Prosper Otemuyiwa"
        class="SmoothCornersBox AvatarImage"
        data-state="disabled"
        data-testid="bezier-avatar"
        style="--b-smooth-corners-box-border-radius: 42%; --b-smooth-corners-box-shadow-blur-radius: 0px; --b-smooth-corners-box-shadow-spread-radius: 0px; --b-smooth-corners-box-padding: 0px; --b-smooth-corners-box-margin: 0px; --b-smooth-corners-box-background-color: var(--bg-white-normal); --b-smooth-corners-box-background-image: url(https://www.google.com);"
      />
    </div>
  </div>
</div>
`;
